--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <!-- 1 타이틀 -->
     <div class ="top">
-        <img src="icon/bgm2.png" alt="음악 버튼" class="bgmbutton" id="bgmButton">
+        <img src="icon/bgm2.PNG" alt="음악 버튼" class="bgmbutton" id="bgmButton">
         <audio id="audioPlayer" src="sound/mainbgm.mp3"></audio>
     </div>
 
@@ -181,7 +181,7 @@
         <img src="img/game1-5.png" id="game1-5" alt="btnl">
         <img src="img/game1-6.png" id="game1-6" alt="btnr">
         <img src="img/game1-4.png" id="game1-4">
-        <img src="img/game1-0.png" id="game1-0">
+        <img src="img/game1-0.PNG" id="game1-0">
     </div>
     
 
